--- a/main.html
+++ b/main.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+<meta charset="UTF-8">
+<title>Testimonials</title>
+<style>
+  body {
+    margin: 0;
+    font-family: Georgia, "Times New Roman", serif;
+  }
 
+  /* Main Container */
+  .testimonials-section {
+    background-color: #f5f5f5;
+    padding: 40px 60px;
+  }
+
+  .testimonials-section h2 {
+    font-size: 36px;
+    margin-bottom: 30px;
+  }
+
+  /* Testimonial Box */
+  .testimonial {
+    background-color: #ffffff;
+    border: 1px solid #dcdcdc;
+    padding: 24px 28px;
+    margin-bottom: 24px;
+  }
+
+  /* Text */
+  .testimonial p {
+    margin: 0 0 16px 0;
+    font-size: 18px;
+    line-height: 1.5;
+  }
+
+  /* Author */
+  .author {
+    text-align: right;
+    font-style: italic;
+    font-size: 18px;
+  }
+</style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<section class="testimonials-section">
+  <h2>Testimonials</h2>
+
+  <div class="testimonial">
+    <p>
+      This product is amazing! I highly recommend it to anyone in need of a solution like this.
+    </p>
+    <div class="author">- John Doe</div>
+  </div>
+
+  <div class="testimonial">
+    <p>
+      I have been using this for a few weeks now and it has completely transformed my workflow.
+    </p>
+    <div class="author">- Jane Smith</div>
+  </div>
+
+</section>
 
 </body>
-
 </html>
