--- a/main.html
+++ b/main.html
@@ -4,10 +4,6 @@
 <meta charset="UTF-8">
 <title>Testimonials</title>
 <style>
-  body {
-    margin: 0;
-    font-family: Georgia, "Times New Roman", serif;
-  }
 
   /* Main Container */
   .testimonials-section {
@@ -15,37 +11,23 @@
     padding: 40px 60px;
   }
 
-  .testimonials-section h2 {
-    font-size: 36px;
-    margin-bottom: 30px;
-  }
-
   /* Testimonial Box */
   .testimonial {
     background-color: #ffffff;
     border: 1px solid #dcdcdc;
-    padding: 24px 28px;
-    margin-bottom: 24px;
+    padding: 15px;
+   
   }
-
-  /* Text */
-  .testimonial p {
-    margin: 0 0 16px 0;
-    font-size: 18px;
-    line-height: 1.5;
-  }
-
-  /* Author */
+	
   .author {
     text-align: right;
     font-style: italic;
-    font-size: 18px;
   }
 </style>
 </head>
 <body>
 
-<section class="testimonials-section">
+<div class="testimonials-section">
   <h2>Testimonials</h2>
 
   <div class="testimonial">
@@ -62,7 +44,7 @@
     <div class="author">- Jane Smith</div>
   </div>
 
-</section>
+</div>
 
 </body>
 </html>
