--- a/main.html
+++ b/main.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Testimonials</title>
-<style>
+  <title>Testimonials</title>
+  <style>
+    /* Main Container */
+    .main {
+      background-color: #f5f5f5;
+      padding: 40px;
+    }
 
-  /* Main Container */
-  .testimonials-section {
-    background-color: #f5f5f5;
-    padding: 40px 60px;
-  }
+    /* Testimonial Box */
+    .testimonial {
+      background-color: white;
+      border: 1px solid #ccc;
+      padding: 20px;
+      margin-bottom: 20px;
+    }
 
-  /* Testimonial Box */
-  .testimonial {
-    background-color: #ffffff;
-    border: 1px solid #dcdcdc;
-    padding: 15px;
-   
-  }
-	
-  .author {
-    text-align: right;
-    font-style: italic;
-  }
-</style>
+    /* Author */
+    .author {
+      text-align: right;
+      font-style: italic;
+    }
+  </style>
 </head>
 <body>
 
-<div class="testimonials-section">
+<div class="main">
   <h2>Testimonials</h2>
 
   <div class="testimonial">
-    <p>
-      This product is amazing! I highly recommend it to anyone in need of a solution like this.
-    </p>
+    <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
     <div class="author">- John Doe</div>
   </div>
 
   <div class="testimonial">
-    <p>
-      I have been using this for a few weeks now and it has completely transformed my workflow.
-    </p>
+    <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
     <div class="author">- Jane Smith</div>
   </div>
 
